--- a/clean-subject.html
+++ b/clean-subject.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -270,20 +270,20 @@
 <div class="container">
     <div class="first-row">
         <div class="sidebar">
-            <a href="../../clean.html" class="sidebar__caption">Очищение</a>
+            <a href="././clean.html" class="sidebar__caption">Очищение</a>
             <div class="sidebar__list">
-                <a href="../../clean-oil.html" class="sidebar__list_item">Гидрофильное масло</a>
-                <a href="../../clean-foam.html" class="sidebar__list_item">Пенка/Мыло/Лосьон/Крем</a>
-                <a href="../../clean-pad.html" class="sidebar__list_item">Очищающие салфетки/пэды</a>
+                <a href="././clean-oil.html" class="sidebar__list_item">Гидрофильное масло</a>
+                <a href="././clean-foam.html" class="sidebar__list_item">Пенка/Мыло/Лосьон/Крем</a>
+                <a href="././clean-pad.html" class="sidebar__list_item">Очищающие салфетки/пэды</a>
                 <a href="#" class="sidebar__list_item">Мицеллярная вода</a>
-                <a href="../../clean-remove.html" class="sidebar__list_item">Демакияж</a>
-                <a href="../../clean-pore.html" class="sidebar__list_item">Очищение для пор</a>
+                <a href="././clean-remove.html" class="sidebar__list_item">Демакияж</a>
+                <a href="././clean-pore.html" class="sidebar__list_item">Очищение для пор</a>
                 <a href="#" class="sidebar__list_item sidebar-active">Предметы для очищение</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/subject/a-pieu-pore-cleansing-100-silk-ball.jpg" alt="" class="content__item_img">
+                <img src="././img/products/subject/a-pieu-pore-cleansing-100-silk-ball.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">
                     A'PIEU cotton puff
                 </span>
@@ -291,7 +291,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/subject/etude-house-my-beauty-tool-exfoliating-jellyfish-silicon-brush.jpg" alt="" class="content__item_img">
+                <img src="././img/products/subject/etude-house-my-beauty-tool-exfoliating-jellyfish-silicon-brush.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Etude House my beauty tool exfoliating jellyfish silicon brush</span>
                 <span class="content__item_price">220 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -300,13 +300,13 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/subject/etude-house-tropical-pineapple-shower-ball.jpg" alt="" class="content__item_img">
+            <img src="././img/products/subject/etude-house-tropical-pineapple-shower-ball.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Etude house tropical pineapple shower ball</span>
             <span class="content__item_price">135 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/subject/missha-cleansing-pad.jpg" alt="" class="content__item_img">
+            <img src="././img/products/subject/missha-cleansing-pad.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Missha cleansing pad</span>
             <span class="content__item_price">85 гривен</span>
             <button class="content__item_btn">Беру!</button>
