--- a/deep-clean-peeling.html
+++ b/deep-clean-peeling.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -272,14 +272,14 @@
         <div class="sidebar">
             <a href="#" class="sidebar__caption">Глубокое очищение/ Эксфолиация</a>
             <div class="sidebar__list">
-                <a href="../../deep-clean-scrub.html" class="sidebar__list_item">Скрабы</a>
-                <a href="../../deep-clean-acid.html" class="sidebar__list_item">Кислотный пиллинг</a>
+                <a href="././deep-clean-scrub.html" class="sidebar__list_item">Скрабы</a>
+                <a href="././deep-clean-acid.html" class="sidebar__list_item">Кислотный пиллинг</a>
                 <a href="#" class="sidebar__list_item sidebar-active">Пиллинг-скатка</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/peeling/farmstay-charcoal-toning-peeling-gel.jpg" alt="" class="content__item_img">
+                <img src="././img/products/peeling/farmstay-charcoal-toning-peeling-gel.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">
                     Farmstay charcoal toning peeling gel
                 </span>
@@ -287,7 +287,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/peeling/farmstay-collagen-water-ful-moist-peeling-gel.jpg" alt="" class="content__item_img">
+                <img src="././img/products/peeling/farmstay-collagen-water-ful-moist-peeling-gel.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Farmstay collagen water full moist peeling gel</span>
                 <span class="content__item_price">195 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -296,91 +296,91 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/peeling/farmstay-dr-v8-vitamin-brightening-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/farmstay-dr-v8-vitamin-brightening-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay Dr.V8 vitamin brightening peeling gel</span>
             <span class="content__item_price">157 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/lebelage-black-snail-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/lebelage-black-snail-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Lebelage black snail peeling gel</span>
             <span class="content__item_price">170 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/innisfree-green-barley-gommage-peeling-mask.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/innisfree-green-barley-gommage-peeling-mask.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Innisfree green barley commage peeling mask</span>
             <span class="content__item_price">375 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/lebelage-lemon-detox-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/lebelage-lemon-detox-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Lebelage lemon detox peeling gel</span>
             <span class="content__item_price">170 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/missha-super-aqua-mild-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/missha-super-aqua-mild-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Missha super aqua mild peeling gel</span>
             <span class="content__item_price">300 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/missha-super-aqua-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/missha-super-aqua-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Missha super aqua peeling gel</span>
             <span class="content__item_price">300 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/holika-holika-sleek-egg-skin-peeling-gel-piling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/holika-holika-sleek-egg-skin-peeling-gel-piling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Holika Holika sleek egg peeling gel</span>
             <span class="content__item_price">235 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/secret-key-lemon-sparkling-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/secret-key-lemon-sparkling-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key lemon sparkling peeling gel</span>
             <span class="content__item_price">255 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/skin79-jeju-aloe-aqua-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/skin79-jeju-aloe-aqua-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Skin79 jeju aloe aqua peeling gel</span>
             <span class="content__item_price">280 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/the-saem-cell-renew-bio-micro-peel-soft-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/the-saem-cell-renew-bio-micro-peel-soft-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem cell renew bio micro peel soft gel</span>
             <span class="content__item_price">505 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/elizavecca-hell-pore-vitamin-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/elizavecca-hell-pore-vitamin-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Elizavecca milky piggy hell pore vitamin bright turn peeling gel</span>
             <span class="content__item_price">690 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/etude-house-berry-aha-bright-peel-mild-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/etude-house-berry-aha-bright-peel-mild-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Etude House berry aha bright peel mild gel</span>
             <span class="content__item_price">435 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/eyenlip-calamansi-vita-peeling-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/eyenlip-calamansi-vita-peeling-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Eyenlip calamansi vita peeling gel</span>
             <span class="content__item_price">245 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/farmstay-all-in-one-whitening-peeling-gel-cream-apple.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/farmstay-all-in-one-whitening-peeling-gel-cream-apple.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay all-in-one whitening peeling gel cream apple</span>
             <span class="content__item_price">185 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/peeling/farmstay-all-in-one-whitening-peeling-gel-cream-kiwi.jpg" alt="" class="content__item_img">
+            <img src="././img/products/peeling/farmstay-all-in-one-whitening-peeling-gel-cream-kiwi.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay all-in-one whitening peeling gel cream kiwi</span>
             <span class="content__item_price">185 гривен</span>
             <button class="content__item_btn">Беру!</button>
