--- a/eye-cream.html
+++ b/eye-cream.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -272,14 +272,14 @@
         <div class="sidebar">
             <a href="#" class="sidebar__caption">Средства для век</a>
             <div class="sidebar__list">
-                <a href="../../eye-patch.html" class="sidebar__list_item">Патчи</a>
+                <a href="././eye-patch.html" class="sidebar__list_item">Патчи</a>
                 <a href="" class="sidebar__list_item">Стик под глаза</a>
                 <a href="#" class="sidebar__list_item sidebar-active">Крем для век</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/eye-cream/aronix-d-panthenol-cica-repair-eye-cream.jpg" alt="" class="content__item_img">
+                <img src="././img/products/eye-cream/aronix-d-panthenol-cica-repair-eye-cream.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">
                    Aronix d-panthenol cica repair eye cream
                 </span>
@@ -287,7 +287,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/eye-cream/aronix-hyaluronic-acid-aqua-eye-cream.jpg" alt="" class="content__item_img">
+                <img src="././img/products/eye-cream/aronix-hyaluronic-acid-aqua-eye-cream.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Aronix hyaluronic acid aqua eye cream</span>
                 <span class="content__item_price">240 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -296,115 +296,115 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/eye-cream/aronix-vitamin-brightening-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/aronix-vitamin-brightening-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Aronix vitamin brightening eye cream</span>
             <span class="content__item_price">240 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/elizavecca-gold-cf-nest-b-jo-eye-want-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/elizavecca-gold-cf-nest-b-jo-eye-want-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Elizavecca gold cf nest b-jo eye want cream</span>
             <span class="content__item_price">430 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/elizavecca-gold-cf-nest-white-bomb-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/elizavecca-gold-cf-nest-white-bomb-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Elizavecca gold cf-nest white bomb eye cream</span>
             <span class="content__item_price">360 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/farmstay-black-snail-all-in-one-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/farmstay-black-snail-all-in-one-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay black snail all-in-one eye cream</span>
             <span class="content__item_price">315 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/farmstay-collagen-water-full-moist-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/farmstay-collagen-water-full-moist-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay collagen water full moist eye cream</span>
             <span class="content__item_price">245 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/farmstay-escargot-noblesse-lntensive-skin-care-5-set.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/farmstay-escargot-noblesse-lntensive-skin-care-5-set.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay escargot noblesse intensive skin care 5 set</span>
             <span class="content__item_price">1 365 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/farmstay-grape-stem-cell-wrinkle-repair-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/farmstay-grape-stem-cell-wrinkle-repair-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay grape stem cell wrinkle repair eye cream</span>
             <span class="content__item_price">275 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/farmstay-green-tea-seed-pure-skin-care-5-set.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/farmstay-green-tea-seed-pure-skin-care-5-set.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay green tea seed pure skin care 5 set</span>
             <span class="content__item_price">950 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/holika-holika-black-caviar-antiwrinkle-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/holika-holika-black-caviar-antiwrinkle-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Holika Holika black caviar antiwrinkle eye cream</span>
             <span class="content__item_price">640 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/its-skin-power-10-formula-vc-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/its-skin-power-10-formula-vc-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">It's skin power 10 formula vc eye cream</span>
             <span class="content__item_price">365 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/its-skin-power-10-formula-ye-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/its-skin-power-10-formula-ye-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">It's skin power 10 formula ye eye cream</span>
             <span class="content__item_price">365 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/laneige-water-bank-hydro-3-kit.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/laneige-water-bank-hydro-3-kit.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Laneige water bank hydro 3 kit</span>
             <span class="content__item_price">135 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/laneige-water-bank-moisture-3-kit.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/laneige-water-bank-moisture-3-kit.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Laneige water bank moisture 3 kit</span>
             <span class="content__item_price">145 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/larvore-natural-origin-super-eye-treatment.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/larvore-natural-origin-super-eye-treatment.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">L'arvore natural origin super eye treatmen</span>
             <span class="content__item_price">205 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/lebelage-eye-cream-black-snail.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/lebelage-eye-cream-black-snail.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Lebelage black snail eye cream</span>
             <span class="content__item_price">140 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/mizon-snail-repair-eye-cream-ulitochnyj-krem-dlya-vek.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/mizon-snail-repair-eye-cream-ulitochnyj-krem-dlya-vek.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Mizon snail repair eye cream</span>
             <span class="content__item_price">500 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/secret-key-snail-repairing-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/secret-key-snail-repairing-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key snail repairing eye cream</span>
             <span class="content__item_price">705 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/secret-key-starting-treatment-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/secret-key-starting-treatment-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key starting treatmen eye cream</span>
             <span class="content__item_price">320 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/eye-cream/farmstay-visible-difference-whiting-eye-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/eye-cream/farmstay-visible-difference-whiting-eye-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay visible difference whiting eye cream</span>
             <span class="content__item_price">315 гривен</span>
             <button class="content__item_btn">Беру!</button>
