--- a/moisturizing-lotion.html
+++ b/moisturizing-lotion.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -270,15 +270,15 @@
 <div class="container">
     <div class="first-row">
         <div class="sidebar">
-            <a href="../../moisturizing.html" class="sidebar__caption">Увлажнение</a>
+            <a href="././moisturizing.html" class="sidebar__caption">Увлажнение</a>
             <div class="sidebar__list">
                 <a href="#" class="sidebar__list_item sidebar-active">Лосьон</a>
-                <a href="../../moisturizing-emulsion.html" class="sidebar__list_item">Эмульсия</a>
+                <a href="././moisturizing-emulsion.html" class="sidebar__list_item">Эмульсия</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/lotion/a-pieu-aqua-marine-mineral-lotion.jpg" alt="" class="content__item_img">
+                <img src="././img/products/lotion/a-pieu-aqua-marine-mineral-lotion.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">
                     A'pieu aqua marine mineral lotion
                 </span>
@@ -286,7 +286,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/lotion/esfolio-super-rich-coconut-facial-lotion.jpg" alt="" class="content__item_img">
+                <img src="././img/products/lotion/esfolio-super-rich-coconut-facial-lotion.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Esfolio super-rich coconut facial lotion</span>
                 <span class="content__item_price">240 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -295,25 +295,25 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/lotion/innisfree-olive-real-lotion.jpg" alt="" class="content__item_img">
+            <img src="././img/products/lotion/innisfree-olive-real-lotion.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Innisfree olive real lotion</span>
             <span class="content__item_price">585 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/lotion/larvore-natural-origin-super-facial-lotion.jpg" alt="" class="content__item_img">
+            <img src="././img/products/lotion/larvore-natural-origin-super-facial-lotion.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">L'arvore natural origin super facial lotion</span>
             <span class="content__item_price">340 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/lotion/lioele-ac-control-lotion.jpg" alt="" class="content__item_img">
+            <img src="././img/products/lotion/lioele-ac-control-lotion.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Lioele A.C control lotion</span>
             <span class="content__item_price">395 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/lotion/secret-key-snow-white-milky-lotion-osvetlyayushhij-loson.jpg" alt="" class="content__item_img">
+            <img src="././img/products/lotion/secret-key-snow-white-milky-lotion-osvetlyayushhij-loson.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key snow white milky lotion</span>
             <span class="content__item_price">335 гривен</span>
             <button class="content__item_btn">Беру!</button>
