--- a/tonic-mist.html
+++ b/tonic-mist.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -270,16 +270,16 @@
 <div class="container">
     <div class="first-row">
         <div class="sidebar">
-            <a href="../../tonic.html" class="sidebar__caption">Тонизирование</a>
+            <a href="././tonic.html" class="sidebar__caption">Тонизирование</a>
             <div class="sidebar__list">
-                <a href="../../tonic-starter.html" class="sidebar__list_item">Стартер</a>
-                <a href="../../tonic-tonic.html" class="sidebar__list_item">Тонер</a>
-                <a href="../../tonic-mist.html" class="sidebar__list_item sidebar-active">Мист</a>
+                <a href="././tonic-starter.html" class="sidebar__list_item">Стартер</a>
+                <a href="././tonic-tonic.html" class="sidebar__list_item">Тонер</a>
+                <a href="././tonic-mist.html" class="sidebar__list_item sidebar-active">Мист</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/mist/elizavecca-hell-pore-water-up-peptide-egf-mist-one-button.jpg" class="content__item_img">
+                <img src="././img/products/mist/elizavecca-hell-pore-water-up-peptide-egf-mist-one-button.jpg" class="content__item_img">
                 <span class="content__item_caption">
                     Elizavecca hell pore water up peptide egf mist one button
                 </span>
@@ -287,7 +287,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/mist/farmstay-it-s-real-aloe-gel-mist.jpg" alt="" class="content__item_img">
+                <img src="././img/products/mist/farmstay-it-s-real-aloe-gel-mist.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Farmstay it's real aloe gel mist</span>
                 <span class="content__item_price">150 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -296,79 +296,79 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/mist/farmstay-it-s-real-collagen-gel-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/farmstay-it-s-real-collagen-gel-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay it's real collagen gel mist</span>
             <span class="content__item_price">150 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/farmstay-it-s-real-pomegranate-gel-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/farmstay-it-s-real-pomegranate-gel-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay it's real pomegranate gel mist</span>
             <span class="content__item_price">150 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/farmstay-la-ferem-aloevera-moisture-soothing-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/farmstay-la-ferem-aloevera-moisture-soothing-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay la ferem aloe vera moisture soothing mist</span>
             <span class="content__item_price">125 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/farmstay-la-ferem-collagen-moisture-soothing-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/farmstay-la-ferem-collagen-moisture-soothing-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay la ferem collagen moisture soothing mist</span>
             <span class="content__item_price">125 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/farmstay-la-ferem-snail-moisture-soothing-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/farmstay-la-ferem-snail-moisture-soothing-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay la ferem snail moisture soothing mist</span>
             <span class="content__item_price">125 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/medi-flower-deep-ocean-marine-collagen-facial-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/medi-flower-deep-ocean-marine-collagen-facial-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Medi flower deep ocean marine collagen facial mist</span>
             <span class="content__item_price">250 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/seantree-hyaluron-ampoule-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/seantree-hyaluron-ampoule-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">SeaNtree hyaluron ampoule mist</span>
             <span class="content__item_price">285 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/the-saem-fresh-bamboo-essential-water-mist-pitatelnyj-bambukovyj-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/the-saem-fresh-bamboo-essential-water-mist-pitatelnyj-bambukovyj-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem fresh bamboo essential water mist</span>
             <span class="content__item_price">275 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/the-saem-mojito-jelly-mist-grapefruit-gelevyj-uvlazhnyayushhij-mist-s-ekstraktom-grejpfruta.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/the-saem-mojito-jelly-mist-grapefruit-gelevyj-uvlazhnyayushhij-mist-s-ekstraktom-grejpfruta.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem mojito jelly mist grapefruit</span>
             <span class="content__item_price">220 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/the-saem-mojito-lemon-water-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/the-saem-mojito-lemon-water-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem mojito lemon water mist</span>
             <span class="content__item_price">210 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/the-saem-mojito-water-mist-lime-mist-lajmovyj-osvezhayushhij.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/the-saem-mojito-water-mist-lime-mist-lajmovyj-osvezhayushhij.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem mojito water mist lime</span>
             <span class="content__item_price">220 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/tony-moly-pocket-bunny-mist-mist-dlya-lica-karmannyj-zajka.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/tony-moly-pocket-bunny-mist-mist-dlya-lica-karmannyj-zajka.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Tony Moly pocket bunny mist</span>
             <span class="content__item_price">295 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/mist/tony-moly-pure-eco-bamboo-fresh-water-soothing-mist.jpg" alt="" class="content__item_img">
+            <img src="././img/products/mist/tony-moly-pure-eco-bamboo-fresh-water-soothing-mist.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Tony Moly pure eco bamboo fresh water soothing mist</span>
             <span class="content__item_price">310 гривен</span>
             <button class="content__item_btn">Беру!</button>
