--- a/tonic-starter.html
+++ b/tonic-starter.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -270,16 +270,16 @@
 <div class="container">
     <div class="first-row">
         <div class="sidebar">
-            <a href="../../tonic.html" class="sidebar__caption">Тонизирование</a>
+            <a href="././tonic.html" class="sidebar__caption">Тонизирование</a>
             <div class="sidebar__list">
                 <a href="#" class="sidebar__list_item sidebar-active">Стартер</a>
-                <a href="../../tonic-tonic.html" class="sidebar__list_item">Тонер</a>
-                <a href="../../tonic-mist.html" class="sidebar__list_item">Мист</a>
+                <a href="././tonic-tonic.html" class="sidebar__list_item">Тонер</a>
+                <a href="././tonic-mist.html" class="sidebar__list_item">Мист</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/start/holika-holika-3-seconds-starter-collagen.jpg" class="content__item_img">
+                <img src="././img/products/start/holika-holika-3-seconds-starter-collagen.jpg" class="content__item_img">
                 <span class="content__item_caption">
                     Holika Holika 3 seconds starter collagen
                 </span>
@@ -287,7 +287,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/start/holika-holika-3-seconds-starter-hyaluronic-acid.jpg" alt="" class="content__item_img">
+                <img src="././img/products/start/holika-holika-3-seconds-starter-hyaluronic-acid.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Holika Holika 3 seconds starter hyaluronic acid</span>
                 <span class="content__item_price">315 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -296,25 +296,25 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/start/holika-holika-3-seconds-starter-vita-complex.jpg" alt="" class="content__item_img">
+            <img src="././img/products/start/holika-holika-3-seconds-starter-vita-complex.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">holika Holika 3 seconds starter vita complex</span>
             <span class="content__item_price">315 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/start/secret-key-24k-gold-premium-first-essence.jpg" alt="" class="content__item_img">
+            <img src="././img/products/start/secret-key-24k-gold-premium-first-essence.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key 24K gold premium first essence</span>
             <span class="content__item_price">495 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/start/secret-key-starting-treatment-essence.jpg" alt="" class="content__item_img">
+            <img src="././img/products/start/secret-key-starting-treatment-essence.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key starting treatment essence</span>
             <span class="content__item_price">495 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/emulsion/holika-holika-gudetama-all-in-one-master.jpg" alt="" class="content__item_img">
+            <img src="././img/products/emulsion/holika-holika-gudetama-all-in-one-master.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Holika Holika gudetama all-in-one master</span>
             <span class="content__item_price">625 гривен</span>
             <button class="content__item_btn">Беру!</button>
