--- a/clean-oil.html
+++ b/clean-oil.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -270,20 +270,20 @@
 <div class="container">
     <div class="first-row">
         <div class="sidebar">
-            <a href="../../clean.html" class="sidebar__caption">Очищение</a>
+            <a href="././clean.html" class="sidebar__caption">Очищение</a>
             <div class="sidebar__list">
                 <a href="#" class="sidebar__list_item sidebar-active">Гидрофильное масло</a>
-                <a href="../../clean-foam.html" class="sidebar__list_item">Пенка/Мыло/Лосьон/Крем</a>
-                <a href="../../clean-pad.html" class="sidebar__list_item">Очищающие салфетки/пэды</a>
-                <a href="../../clean-water.html" class="sidebar__list_item">Мицеллярная вода</a>
-                <a href="../../clean-remove.html" class="sidebar__list_item">Демакияж</a>
-                <a href="../../clean-pore.html" class="sidebar__list_item">Очищение для пор</a>
-                <a href="../../clean-subject.html" class="sidebar__list_item">Предметы для очищение</a>
+                <a href="././clean-foam.html" class="sidebar__list_item">Пенка/Мыло/Лосьон/Крем</a>
+                <a href="././clean-pad.html" class="sidebar__list_item">Очищающие салфетки/пэды</a>
+                <a href="././clean-water.html" class="sidebar__list_item">Мицеллярная вода</a>
+                <a href="././clean-remove.html" class="sidebar__list_item">Демакияж</a>
+                <a href="././clean-pore.html" class="sidebar__list_item">Очищение для пор</a>
+                <a href="././clean-subject.html" class="sidebar__list_item">Предметы для очищение</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../img/products/oil/tony-moly-wonder-apricot-deep-oil.jpg" alt="" class="content__item_img">
+                <img src="./img/products/oil/tony-moly-wonder-apricot-deep-oil.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">
                     Tony Moly wonder apricot deep cleansing oil
                 </span>
@@ -291,7 +291,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../img/products/oil/seantree-hyaluron-oil.jpg" alt="" class="content__item_img">
+                <img src="./img/products/oil/seantree-hyaluron-oil.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">SeaNTree hyaluron cleansing oil</span>
                 <span class="content__item_price">510 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -300,43 +300,43 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../img/products/oil/secret-key-lemon-sparkling-oil.jpg" alt="" class="content__item_img">
+            <img src="./img/products/oil/secret-key-lemon-sparkling-oil.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key lemon sparkling cleansing oil</span>
             <span class="content__item_price">380 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../img/products/oil/skin79-cleanest-coconut-oil.jpg" alt="" class="content__item_img">
+            <img src="./img/products/oil/skin79-cleanest-coconut-oil.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Skin79 cleanest coconut cleansing oil</span>
             <span class="content__item_price">415 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../img/products/oil/the-saem-le-aro-oil.jpg" alt="" class="content__item_img">
+            <img src="./img/products/oil/the-saem-le-aro-oil.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem LeAro cleansing oil</span>
             <span class="content__item_price">400 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../img/products/oil/the-saem-natural-condition-oil-deep-clean.jpg" alt="" class="content__item_img">
+            <img src="./img/products/oil/the-saem-natural-condition-oil-deep-clean.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem NATURAL CONDITION cleansing oil deep clean</span>
             <span class="content__item_price">340 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../img/products/oil/the-saem-natural-condition-oil-mild.jpg" alt="" class="content__item_img">
+            <img src="./img/products/oil/the-saem-natural-condition-oil-mild.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem NATURAL CONDITION cleansing oil mild</span>
             <span class="content__item_price">340 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../img/products/oil/the-saem-natural-condition-oil-moisture.jpg" alt="" class="content__item_img">
+            <img src="./img/products/oil/the-saem-natural-condition-oil-moisture.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem NATURAL CONDITION cleansing oil moisture</span>
             <span class="content__item_price">340 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../img/products/oil/the-skin-house-natural-green-tea-oil.jpg" alt="" class="content__item_img">
+            <img src="./img/products/oil/the-skin-house-natural-green-tea-oil.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Skin House natural green tea cleansing oil</span>
             <span class="content__item_price">395 гривен</span>
             <button class="content__item_btn">Беру!</button>
