--- a/clean-pore.html
+++ b/clean-pore.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -270,20 +270,20 @@
 <div class="container">
     <div class="first-row">
         <div class="sidebar">
-            <a href="../../clean.html" class="sidebar__caption">Очищение</a>
+            <a href="././clean.html" class="sidebar__caption">Очищение</a>
             <div class="sidebar__list">
-                <a href="../../clean-oil.html" class="sidebar__list_item">Гидрофильное масло</a>
-                <a href="../../clean-foam.html" class="sidebar__list_item">Пенка/Мыло/Лосьон/Крем</a>
-                <a href="../../clean-pad.html" class="sidebar__list_item">Очищающие салфетки/пэды</a>
-                <a href="../../clean-water.html" class="sidebar__list_item">Мицеллярная вода</a>
+                <a href="././clean-oil.html" class="sidebar__list_item">Гидрофильное масло</a>
+                <a href="././clean-foam.html" class="sidebar__list_item">Пенка/Мыло/Лосьон/Крем</a>
+                <a href="././clean-pad.html" class="sidebar__list_item">Очищающие салфетки/пэды</a>
+                <a href="././clean-water.html" class="sidebar__list_item">Мицеллярная вода</a>
                 <a href="#" class="sidebar__list_item">Демакияж</a>
-                <a href="../../clean-pore.html" class="sidebar__list_item sidebar-active">Очищение для пор</a>
-                <a href="../../clean-subject.html" class="sidebar__list_item">Предметы для очищение</a>
+                <a href="././clean-pore.html" class="sidebar__list_item sidebar-active">Очищение для пор</a>
+                <a href="././clean-subject.html" class="sidebar__list_item">Предметы для очищение</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/for-pore/eyenlip-black-peel-off-pack.jpg" alt="" class="content__item_img">
+                <img src="././img/products/for-pore/eyenlip-black-peel-off-pack.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">
                     Eyenlip black peel off pack
                 </span>
@@ -291,7 +291,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/for-pore/elizavecca-hell-pore-longolongo-gronique-black-mask-pack.jpg" alt="" class="content__item_img">
+                <img src="././img/products/for-pore/elizavecca-hell-pore-longolongo-gronique-black-mask-pack.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Elizavecca hell pore longolongo gronique black mask pack</span>
                 <span class="content__item_price">470 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -300,97 +300,97 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/for-pore/elizavecca-hell-pore-bubble-black-boom-pore-pack.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/elizavecca-hell-pore-bubble-black-boom-pore-pack.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Elizavecca hell pore bubble black boom pore pack</span>
             <span class="content__item_price">390 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/eyenlip-gold-peel-off-pack.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/eyenlip-gold-peel-off-pack.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Eyenlip gold peel off pack</span>
             <span class="content__item_price">60 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/eyenlip-volcano-clear-wash-off-pack-20g.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/eyenlip-volcano-clear-wash-off-pack-20g.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Eyenlip volcano clear wash off pack</span>
             <span class="content__item_price">60 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/farmstay-charcoal-black-head-peel-off-mask-pack.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/farmstay-charcoal-black-head-peel-off-mask-pack.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Farmstay charcoal blackhead peel-off mask pack</span>
             <span class="content__item_price">175 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/elizavecca-hell-pore-longolongo-gronique-diamond-mask-pack.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/elizavecca-hell-pore-longolongo-gronique-diamond-mask-pack.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Elizavecca hell pore longolongo gronique diamond mask pack</span>
             <span class="content__item_price">470 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/elizavecca-hell-pore-longolongo-gronique-gold-mask-pack.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/elizavecca-hell-pore-longolongo-gronique-gold-mask-pack.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Elizavecca hell pore longolongo gronique gold mask pack</span>
             <span class="content__item_price">470 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/holika-holika-pig-nose-clear-black-head-deep-cleansing-oil-balm.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/holika-holika-pig-nose-clear-black-head-deep-cleansing-oil-balm.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Holika Holika pig-nose clear blackhead deep cleansing oil balm</span>
             <span class="content__item_price">206 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/holika-holika-pig-nose-clear-black-head-peeling-massage-gel.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/holika-holika-pig-nose-clear-black-head-peeling-massage-gel.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Holika Holika pig-nose clear black head peeling massage gel</span>
             <span class="content__item_price">206 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/holika-holika-pig-nose-clear-black-head-steam-starter.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/holika-holika-pig-nose-clear-black-head-steam-starter.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Holika Holika pig-nose clear blackhead steam starter</span>
             <span class="content__item_price">152 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/elizavecca-milky-piggy-hell-pore-clean-up-mask.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/elizavecca-milky-piggy-hell-pore-clean-up-mask.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Elizavecca milky piggy hell pore clean up mask</span>
             <span class="content__item_price">290 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/nightingale-one-minutes-tako-mask-polishing.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/nightingale-one-minutes-tako-mask-polishing.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Nightingale one minutes tako mask polishing</span>
             <span class="content__item_price">300 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/nightingale-quick-dry-tako-pack-peel-off.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/nightingale-quick-dry-tako-pack-peel-off.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem phyto lip & eye make up remover</span>
             <span class="content__item_price">290 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/tony-moly-takopore-blackhead-scrub-stick.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/tony-moly-takopore-blackhead-scrub-stick.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Tony Moly tako pore blackhead scrub stick</span>
             <span class="content__item_price">255 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/secret-key-lemon-sparkling-stick-cleanser.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/secret-key-lemon-sparkling-stick-cleanser.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Secret Key lemon sparkling stick cleanser</span>
             <span class="content__item_price">400 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/tony-moly-egg-pore-blackhead-steam-balm.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/tony-moly-egg-pore-blackhead-steam-balm.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Tony Moly egg pore blackhead steam balm</span>
             <span class="content__item_price">315 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/for-pore/tony-moly-pokemon-buried-digda-peel-off-pack.jpg" alt="" class="content__item_img">
+            <img src="././img/products/for-pore/tony-moly-pokemon-buried-digda-peel-off-pack.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Tony Moly pokemon buries digda peel off pack</span>
             <span class="content__item_price">375 гривен</span>
             <button class="content__item_btn">Беру!</button>
