--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
             <span class="logo__text">jet</span><span class="logo__text_opacity">ro</span>
         </div>
         <div class="navigation__box">
-            <a href="../index.html" class="navigation__item">Home</a>
-            <a href="../about.html" class="navigation__item">About  Us</a>
-            <a href="../blog.html" class="navigation__item">Blog</a>
-            <a href="../portfolio.html" class="navigation__item">Portfolio</a>
-            <a href="../contact.html" class="navigation__item">Contact  US</a>
+            <a href="./index.html" class="navigation__item">Home</a>
+            <a href="./about.html" class="navigation__item">About  Us</a>
+            <a href="./blog.html" class="navigation__item">Blog</a>
+            <a href="./portfolio.html" class="navigation__item">Portfolio</a>
+            <a href="./contact.html" class="navigation__item">Contact  US</a>
         </div>
     </div>
 </div>
