--- a/cream-massage.html
+++ b/cream-massage.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -270,7 +270,7 @@
 <div class="container">
     <div class="first-row">
         <div class="sidebar">
-            <a href="../../cream.html" class="sidebar__caption">Крем для лица</a>
+            <a href="././cream.html" class="sidebar__caption">Крем для лица</a>
             <div class="sidebar__list">
                 <a href="#" class="sidebar__list_item sidebar-active">Массажный крем для лица</a>
                 <a href="" class="sidebar__list_item">Крем</a>
@@ -279,7 +279,7 @@
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/cream-massage/lebelage-brown-rice-cleaning-massage-cream.jpg" class="content__item_img">
+                <img src="././img/products/cream-massage/lebelage-brown-rice-cleaning-massage-cream.jpg" class="content__item_img">
                 <span class="content__item_caption">
                     Lebelage brown rice cleaning massage cream
                 </span>
@@ -287,7 +287,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products/cream-massage/lebelage-charcoal-pore-clay-massage-cream.jpg" alt="" class="content__item_img">
+                <img src="././img/products/cream-massage/lebelage-charcoal-pore-clay-massage-cream.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Lebelage charcoal pore clay massage cream</span>
                 <span class="content__item_price">240 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -296,37 +296,37 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/cream-massage/lebelage-green-tea-balancing-massage-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/cream-massage/lebelage-green-tea-balancing-massage-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Lebelage green tea balancing massage cream</span>
             <span class="content__item_price">240 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/cream-massage/lebelage-lemon-detox-massage-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/cream-massage/lebelage-lemon-detox-massage-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Lebelage lemon detox massage cream</span>
             <span class="content__item_price">240 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/cream-massage/missha-near-skin-self-control-firming-massage.jpg" alt="" class="content__item_img">
+            <img src="././img/products/cream-massage/missha-near-skin-self-control-firming-massage.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Missha near skin self control firming massage</span>
             <span class="content__item_price">410 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/cream-massage/missha-near-skin-self-control-purifying-massage.jpg" alt="" class="content__item_img">
+            <img src="././img/products/cream-massage/missha-near-skin-self-control-purifying-massage.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Missha near skin self control purifying massage</span>
             <span class="content__item_price">410 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/cream-massage/the-saem-natural-condition-brightening-massage-cream.jpg" alt="" class="content__item_img">
+            <img src="././img/products/cream-massage/the-saem-natural-condition-brightening-massage-cream.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem natural condition brightening massage cream</span>
             <span class="content__item_price">250 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/cream-massage/the-saem-natural-condition-firming-massage-cream-granatovyj-massazhnyj-krem.jpg" alt="" class="content__item_img">
+            <img src="././img/products/cream-massage/the-saem-natural-condition-firming-massage-cream-granatovyj-massazhnyj-krem.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Saem natural condition firming massage cream</span>
             <span class="content__item_price">250 гривен</span>
             <button class="content__item_btn">Беру!</button>
