--- a/deep-clean-scrub.html
+++ b/deep-clean-scrub.html
@@ -39,26 +39,26 @@
                 <a href="./clean-oil.html" class="navigation-submenu__item">Гидрофильное масло</a>
                 <a href="./clean-foam.html" class="navigation-submenu__item">Пенка/Мыло/Лосьон/Крем</a>
                 <a href="./clean-pad.html" class="navigation-submenu__item">Очищающие салфетки/пэды</a>
-                <a href="../clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
-                <a href="../clean-remove.html" class="navigation-submenu__item">Демакияж</a>
-                <a href="../clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
-                <a href="../clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
+                <a href="./clean-water.html" class="navigation-submenu__item">Мицеллярная вода</a>
+                <a href="./clean-remove.html" class="navigation-submenu__item">Демакияж</a>
+                <a href="./clean-pore.html" class="navigation-submenu__item">Очищение для пор</a>
+                <a href="./clean-subject.html" class="navigation-submenu__item">Предметы для очищение</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../deep-clean.html" class="navigation-submenu__caption">
+                <a href="./deep-clean.html" class="navigation-submenu__caption">
                     Глубокое очищение /Эксфолиация
                 </a>
-                <a href="../deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
-                <a href="../deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
-                <a href="../deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
+                <a href="./deep-clean-scrub.html" class="navigation-submenu__item">Скрабы</a>
+                <a href="./deep-clean-acid.html" class="navigation-submenu__item">Кислотный пилинг</a>
+                <a href="./deep-clean-peeling.html" class="navigation-submenu__item">Пилинг-скатка</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../tonic.html" class="navigation-submenu__caption">
+                <a href="./tonic.html" class="navigation-submenu__caption">
                     Тонизирование
                 </a>
-                <a href="../tonic-starter.html" class="navigation-submenu__item">Стартер</a>
-                <a href="../tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
-                <a href="../tonic-mist.html" class="navigation-submenu__item">Мист</a>
+                <a href="./tonic-starter.html" class="navigation-submenu__item">Стартер</a>
+                <a href="./tonic-tonic.html" class="navigation-submenu__item">Тонер</a>
+                <a href="./tonic-mist.html" class="navigation-submenu__item">Мист</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
@@ -68,25 +68,25 @@
                 <a href="#" class="navigation-submenu__item">Точечные сыворотки</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../eye.html" class="navigation-submenu__caption">
+                <a href="./eye.html" class="navigation-submenu__caption">
                     Средства для век
                 </a>
-                <a href="../eye-patch.html" class="navigation-submenu__item">Патчи</a>
+                <a href="./eye-patch.html" class="navigation-submenu__item">Патчи</a>
                 <a href="#" class="navigation-submenu__item">Стик под глаза</a>
-                <a href="../eye-cream.html" class="navigation-submenu__item">Крем для век</a>
+                <a href="./eye-cream.html" class="navigation-submenu__item">Крем для век</a>
             </div>
             <div class="navigation-submenu__section">
-                <a href="../moisturizing.html" class="navigation-submenu__caption">
+                <a href="./moisturizing.html" class="navigation-submenu__caption">
                     Увлажнение
                 </a>
-                <a href="../moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
-                <a href="../moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
+                <a href="./moisturizing-lotion.html" class="navigation-submenu__item">Лосьон</a>
+                <a href="./moisturizing-emulsion.html" class="navigation-submenu__item">Эмульсия</a>
             </div>
             <div class="navigation-submenu__section">
                 <a href="#" class="navigation-submenu__caption">
                     Крема для лица
                 </a>
-                <a href="../cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
+                <a href="./cream-massage.html" class="navigation-submenu__item">Массажный крем для лица</a>
                 <a href="#" class="navigation-submenu__item">Крем</a>
                 <a href="#" class="navigation-submenu__item">Крем-гель</a>
             </div>
@@ -272,14 +272,14 @@
         <div class="sidebar">
             <a href="#" class="sidebar__caption">Глубокое очищение/ Эксфолиация</a>
             <div class="sidebar__list">
-                <a href="../../eye-patch.html" class="sidebar__list_item sidebar-active">Скрабы</a>
-                <a href="../../deep-clean-acid.html" class="sidebar__list_item">Кислотный пиллинг</a>
-                <a href="../../deep-clean-peeling.html" class="sidebar__list_item">Пиллинг-скатка</a>
+                <a href="././eye-patch.html" class="sidebar__list_item sidebar-active">Скрабы</a>
+                <a href="././deep-clean-acid.html" class="sidebar__list_item">Кислотный пиллинг</a>
+                <a href="././deep-clean-peeling.html" class="sidebar__list_item">Пиллинг-скатка</a>
             </div>
         </div>
         <div class="first-row content">
             <div class="content__item">
-                <img src="../../img/products/scrubs/etude-house-baking-powder-crunch-pore-scrub.jpg" alt="" class="content__item_img">
+                <img src="././img/products/scrubs/etude-house-baking-powder-crunch-pore-scrub.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">
                    Etude House baking powder crunch pore scrub
                 </span>
@@ -287,7 +287,7 @@
                 <button class="content__item_btn">Беру!</button>
             </div>
             <div class="content__item">
-                <img src="../../img/products//scrubs/holika-holika-pig-nose-clear-black-head-cleansing-sugar-scrub.jpg" alt="" class="content__item_img">
+                <img src="././img/products//scrubs/holika-holika-pig-nose-clear-black-head-cleansing-sugar-scrub.jpg" alt="" class="content__item_img">
                 <span class="content__item_caption">Holika Holika pig nose clear blackhead cleansing sugar scrub</span>
                 <span class="content__item_price">200 гривен</span>
                 <button class="content__item_btn">Беру!</button>
@@ -296,13 +296,13 @@
     </div>
     <div class="content">
         <div class="content__item">
-            <img src="../../img/products/scrubs/the-skin-house-cacao-sugar-blackhead-off.jpg" alt="" class="content__item_img">
+            <img src="././img/products/scrubs/the-skin-house-cacao-sugar-blackhead-off.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">The Skin house cacao sugar blackhead off</span>
             <span class="content__item_price">320 гривен</span>
             <button class="content__item_btn">Беру!</button>
         </div>
         <div class="content__item">
-            <img src="../../img/products/scrubs/tony-moly-kiss-kiss-lip-scrub-skrab-dlya-gub.jpg" alt="" class="content__item_img">
+            <img src="././img/products/scrubs/tony-moly-kiss-kiss-lip-scrub-skrab-dlya-gub.jpg" alt="" class="content__item_img">
             <span class="content__item_caption">Tony Moly kiss kiss lip scrub</span>
             <span class="content__item_price">215 гривен</span>
             <button class="content__item_btn">Беру!</button>
