--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,11 @@
             <span class="logo__text">jet</span><span class="logo__text_opacity">ro</span>
         </div>
         <div class="navigation__box">
-            <a href="../index.html" class="navigation__item">Home</a>
-            <a href="../about.html" class="navigation__item">About  Us</a>
-            <a href="../blog.html" class="navigation__item">Blog</a>
-            <a href="../portfolio.html" class="navigation__item">Portfolio</a>
-            <a href="../contact.html" class="navigation__item">Contact  US</a>
+            <a href="./index.html" class="navigation__item">Home</a>
+            <a href="./about.html" class="navigation__item">About  Us</a>
+            <a href="./blog.html" class="navigation__item">Blog</a>
+            <a href="./portfolio.html" class="navigation__item">Portfolio</a>
+            <a href="./contact.html" class="navigation__item">Contact  US</a>
         </div>
     </div>
 </div>
@@ -49,7 +49,7 @@
     </div>
     <div class="portfolio__content">
         <div class="portfolio__content_item">
-            <a href="../portfolio-item.html">
+            <a href="./portfolio-item.html">
                 <img src="./img/adventuretime.jpg" alt="" class="portfolio__content_img">
                 <div class="portfolio__content_caption">Character  Design</div>
                 <div class="portfolio__content_data">June 15, 2012</div>
